# Meta-MCSR

./: .gitignore  README.md  README_CN.md  README_MODEL_STRUCTURE.md  SNGP.py  SYSTEM_README.md  config.yaml  debug_dataparallel.py  expression_encoder.py  expression_encoder_inference.py  expression_encoder_training.py  main.py  mcts_core.py  mcts_enhanced.py  mcts_with_reward_network.py  pyproject.toml  quick_start.sh  reward_network.py  reward_network_training.py  run_self_learning_mcts.py  self_learning_mcts.py  similarity_calculator.py  stGP.py  train.py  脚本命令文件.md
experiments/: generate_pretrain_data.py
scripts/: 0_run_pretraining.py  1_run_online_loop.py  2_run_inference.py  generate_pretrain_data_PySR.py
snip/: trainer.py
snip/envs/: generators.py
snip/model/: __init__.py
src/: expression_encoder.py  mcts.py  reward_network.py  snip_similarity_calculator.py
symbolic_regression/: __init__.py
symbolic_regression/core/: mcts_engine.py  reward_calculator.py
symbolic_regression/models/: data_encoder.py  expression_encoder.py
symbolic_regression/training/: finetune_loop.py  pretrain_pipeline.py
symbolic_regression/utils/: config_utils.py  data_loader.py  expression_parser.py  logging_utils.py  model_utils.py
weights/: expression_encoder_tokenizer.pkl
