[project]
name = "meta-mcsr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.9.1",
    "numpy",
    "matplotlib",
    "scikit-learn",
    "pyyaml",
    "seaborn",
    "tqdm",
    "python-dotenv",
    "requests",
]
