[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "symbolic-regression-mcts"
version = "0.1.0"
description = "基于对比学习预训练与真实解引导微调的MCTS集成框架"
authors = [
    {name = "iFlow CLI", email = "iflow@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "transformers>=4.20.0",
    "tensorboard>=2.8.0",
    "tqdm>=4.64.0",
    "hydra-core>=1.2.0",
    "omegaconf>=2.2.0",
    "mlflow>=2.0.0",
    "wandb>=0.13.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "pandas>=1.5.0",
    "pydantic>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
    "pre-commit>=2.20.0",
    "jupyter>=1.0.0",
]

[project.scripts]
run-pretraining = "scripts.0_run_pretraining:main"
run-online-loop = "scripts.1_run_online_loop:main"
run-inference = "scripts.2_run_inference:main"

[project.urls]
Homepage = "https://github.com/iflow/symbolic-regression-mcts"
Repository = "https://github.com/iflow/symbolic-regression-mcts"
Documentation = "https://symbolic-regression-mcts.readthedocs.io"
"Bug Tracker" = "https://github.com/iflow/symbolic-regression-mcts/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]