[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snip"
version = "0.1.0"
description = "Symbolic Neural Information Preserving project for mathematical reasoning"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "SNIP Team"}
]
keywords = ["machine learning", "symbolic regression", "mathematical reasoning", "neural networks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core ML/Scientific Computing
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",

    # Deep Learning & Training
    "pytorch-lightning>=2.0.0",
    "torchmetrics>=0.11.0",
    "tqdm>=4.65.0",

    # Mathematical & Symbolic
    "sympy>=1.11.0",
    "sympytorch>=0.1.1",
    "gplearn>=0.4.2",
    "xgboost>=1.7.0",

    # Data Processing & Utilities
    "joblib>=1.2.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "packaging>=23.0",

    # Monitoring & Logging
    "wandb>=0.14.0",
    "sentry-sdk>=1.19.0",

    # System & Performance
    "psutil>=5.9.0",
    "nvitop>=1.1.0",
    "setproctitle>=1.3.0",

    # Utilities
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "python-dateutil>=2.8.0",
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",

    # Code Quality
    "black>=23.0.0",
    "ruff>=0.0.270",
    "mypy>=1.0.0",

    # Development Tools
    "pre-commit>=3.0.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]

cuda = [
    # CUDA-specific packages (will be conditionally installed)
    "torch>=2.0.0+cu118",
    "torchvision>=0.15.0+cu118",
    "torchaudio>=2.0.0+cu118",
    "triton>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/snip"
Repository = "https://github.com/your-org/snip"
Documentation = "https://snip.readthedocs.io"
"Bug Tracker" = "https://github.com/your-org/snip/issues"

[project.scripts]
snip-train = "snip.train:main"
snip-eval = "snip.eval:main"

[tool.hatch.version]
path = "snip/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["snip"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["snip"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]